WRP-735 fixed alignment of pagination, styled validation headers, buttons for both reports, general realignments and matching up to ui design

--- a/app/styles/edit.scss
+++ b/app/styles/edit.scss
@@ -979,3 +979,5 @@ select.primitive{font-size:10px!important;height: 24px !important;}
     background-color: #ff0990!important;
     color:#fff!important;
 }
+//alert
+.alert-info.saved {max-width:450px}
